Added eamodio.gitlens extension recommendation to workspace.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,5 +2,6 @@
     "recommendations": [
         "ms-dotnettools.csharp",
         "ms-azuretools.vscode-docker",
+        "eamodio.gitlens",
     ]
 }
