Added editorconfig.editorconfig extension recommendation to workspace.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,5 +3,6 @@
         "ms-dotnettools.csharp",
         "ms-azuretools.vscode-docker",
         "eamodio.gitlens",
+        "editorconfig.editorconfig",
     ]
 }
