--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,5 +4,6 @@
         "ms-azuretools.vscode-docker",
         "eamodio.gitlens",
         "editorconfig.editorconfig",
+        "mhutchie.git-graph"
     ]
 }
