--- a/src/Flight Computer/Flight Computer.csproj
+++ b/src/Flight Computer/Flight Computer.csproj
@@ -8,6 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="12.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
         <ProjectReference Include="..\SPIN.Core/dotnet/SPIN.Core.csproj" />
     </ItemGroup>
 
