--- a/src/Flight Computer/Flight Computer.csproj
+++ b/src/Flight Computer/Flight Computer.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="MediatR" Version="12.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
