--- a/src/Flight Computer/Flight Computer.csproj
+++ b/src/Flight Computer/Flight Computer.csproj
@@ -17,4 +17,10 @@
         <ProjectReference Include="..\SPIN.Core/dotnet/SPIN.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <None Update="appsettings*.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+
 </Project>
